--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -27,6 +27,9 @@
 					<li>
 						<a href="#calljs-leoCdpRouter('My_Login_Editor')"> <i class="fa fa-user"></i> My Login Info </a> 
 					</li>
+					<li>
+						<a href="javascript:callLeoBotForIdeasRecommender('global')"> <i class="fa fa-question-circle"></i> Hi LEO </a> 
+					</li>
 					<li style="display: none;" > 
 						<a href="#"> <i class="fa fa-fw fa-envelope"></i> Inbox </a> 
 					</li>
