upgrade system for data journey map

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -112,7 +112,7 @@
 					<h4> All Event Observers  </h4>
 				</div>
 		        <div class="table-responsive" >
-		            <div id="data_observers_table" style="height: 700px"></div>
+		            <div id="data_observers_table"></div>
 		        </div>
 			</div>
 			
