fix bugs, update for new features

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -94,7 +94,7 @@
        		</li>
 		</ul>
 
-		<div class="tab-content" id="journey_touchpoint_tabs" style="min-height: 450px;" >
+		<div class="tab-content" id="journey_touchpoint_tabs" style="min-height:450px; margin-bottom:60px;" >
 
 			<!-- tab 1 Touchpoint Data Hub   -->
 			<div class="tab-pane active" id="panel_touchpoint_hubs" >
