--- a/resources/app-templates/target-media/qr-code-scan.html
+++ b/resources/app-templates/target-media/qr-code-scan.html
@@ -21,8 +21,8 @@
    		var leoObserverId = "{{customData.observerId}}";
    		var touchpointHubId = "{{customData.touchpointHubId}}";
    		
-		// for click direction to landing page
-		var targetMediaUrl = "{{customData.targetMediaUrl}}";
+   		// for click direction to landing page
+		var targetMediaUrl = "{{{customData.targetMediaUrl}}}";
 		 
 		// Data Touchpoint Metadata 
 		window.srcTouchpointName = encodeURIComponent(document.title).trim();
