update to fix bugs

--- a/resources/app-templates/target-media/short-link-click.html
+++ b/resources/app-templates/target-media/short-link-click.html
@@ -101,7 +101,7 @@
 	
 		var referer = "{{{customData.referer}}}";
 		var srcTouchpointName = "{{{customData.srcTouchpointName}}}";
-		var newsletterSubscription = {{{customData.newsletterSubscription}}} === true && submitedSubscription();
+		var newsletterSubscription = "{{{customData.newsletterSubscription}}}" === "true" && submitedSubscription();
 		
 	    //LEO Web Observer for channel: 
    		var leoObserverLogDomain = "{{{baseLeoObserverUrl}}}";
