--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -123,9 +123,10 @@
         			</button>
                 </div>
                 <div class="col-lg-12 container" style="min-height: 1500px; overflow-y: scroll; overflow-x: hidden; margin-top: 12px; " >
-					<ul id="feedback_survey_flow" class="list-group list-group-dividered list-group-full"  >
+					<ul id="feedback_survey_flow" class="list-group list-group-dividered list-group-full" style="" >
 		     			<!-- feedback_survey_flow  -->
 					</ul>
+					<iframe src="https://e.infogram.com/de48b477-0e90-42e5-8dfe-13959e9789f0?src=embed" width="100%" height="1200" style="width: 100%; height: 1200px; border: 0; display: none;" ></iframe>
 				</div>
 				
 			</div>
