--- a/resources/app-templates/recommender/content-item.html
+++ b/resources/app-templates/recommender/content-item.html
@@ -6,10 +6,16 @@
 	
 	<!-- META FOR FACEBOOK -->
 	<meta property="og:site_name" content="{{host}}"/>
+	<meta property="og:rich_attachment" content="true"/>
 	<meta property="og:type" content="article"/>
-	<meta property="og:image" itemprop="thumbnailUrl" content="{{{customData.content.headlineImageUrl}}}"/>
+	<meta property="og:image" itemprop=thumbnailUrl content="{{{customData.content.headlineImageUrl}}}"/>
+	<meta property="og:image:width" content="800"/>
+	<meta property="og:image:height" content="420"/>
 	<meta content="{{customData.content.title}}" itemprop="headline" property="og:title"/>
 	<meta content="{{customData.content.description}}" itemprop="description" property="og:description"/>
+	
+	<meta name="robots" content="noarchive, max-image-preview:large, index"/>
+	<meta name="googlebot" content="noarchive"/>
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="https://{{baseStaticUrl}}images/leocdp-icon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="https://{{baseStaticUrl}}images/leocdp-icon/favicon-32x32.png">
@@ -97,7 +103,7 @@
 	}
 	
 	#image_holder {
-		display: block; margin-left: auto;margin-right: auto; width:94%; max-height: 380px;
+		display: block; margin-left: auto;margin-right: auto; max-width:100%; max-height: 420px;
 	}
 	#video_holder {
 		text-align: center;
@@ -114,8 +120,8 @@
 	  	
 	    	<h3 class="cover-heading">{{pageTitle}}</h3>
 	    	
-	    	<div style="display: none;" id="image_container" >
-	    		<img style="display: none; " src="{{{customData.content.headlineImageUrl}}}" id="image_holder" />
+	    	<div id="image_container" >
+	    		<img id="image_holder"  src="{{{customData.content.headlineImageUrl}}}" />
 	    	</div>
 	    	<hr>
 	    	<div style="display: none;" id="video_holder" >
@@ -129,10 +135,10 @@
 	
 	<!-- MAIN JS -->
 	<script>
-		var imgSrc = $('#image_holder').attr('src');
+		var imgSrc = $('#image_holder').attr('src').trim();
 		if(imgSrc.indexOf('http') === 0){
-			$('#image_holder').show();
-			$('#image_container').show();
+			$('#image_holder').hide();
+			$('#image_container').hide();
 		}
 	
 		var leoObserverLogDomain = "{{baseLeoObserverUrl}}";
