--- a/resources/app-templates/leocdp-admin/modules/asset/item-feedback-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-feedback-editor.html
@@ -54,12 +54,12 @@
     <!-- MAIN BODY here -->
     <div class="row" id="feedback_form_editor_div" style="visibility: hidden;"> 
             <div class="form-group">
-                 <label> Form Title </label>
+                 <label> Title </label>
                  <input id="asset_item_title" type="text" class="form-control" placeholder="Enter title" name="title" autocomplete="off">
             </div>
 
             <div class="form-group">
-                 <label> Form Description </label>
+                 <label> Description </label>
                  <div id="description_div" style="display: block;">
                      <textarea class="form-control" rows="2" placeholder="Enter description" name="description"></textarea>
                  </div>
