--- a/resources/app-templates/leocdp-admin/modules/asset/item-product-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-product-editor.html
@@ -28,12 +28,12 @@
 
             <fieldset>
 				<div class="form-group">
-                    <label>Title</label>
+                    <label> Title </label>
                     <input id="asset_item_title" type="text" class="form-control" placeholder="Enter title" name="title" autocomplete="off" required >
                 </div>
                 
                 <div class="form-group">
-                    <label>Description</label>
+                    <label> Description </label>
                     <div id="description_div" style="display: block;">
                         <textarea class="form-control" rows="2" placeholder="Enter description" name="description"></textarea>
                     </div>
@@ -188,7 +188,7 @@
 				            </div>
 			                <div class="form-group" id="content_div_wrapper">
 			                    <label>Product Content</label>
-			                    <button type="button" class="btn btn-info" data-visibilty="hidden" onclick="toggleRawHtmlEditor(this)" style="margin: 9px 9px;"> 
+			                    <button type="button" class="btn btn-do-now" data-visibilty="hidden" onclick="toggleRawHtmlEditor(this)" style="margin: 9px 9px;"> 
 					        		<i class="fa fa-fw fa-code"></i> Show HTML Editor 
 					        	</button>
 			                    <div id="content_div">
