--- a/resources/app-templates/recommender/presentation-item.html
+++ b/resources/app-templates/recommender/presentation-item.html
@@ -32,7 +32,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js" ></script>
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 	
@@ -55,6 +55,7 @@
 		#video_holder {
 			text-align: center;
 		}
+		
 		#presentation_container {
 			width: 100%;
 	    	height: 610px;
@@ -78,6 +79,23 @@
 			min-width: 120px; padding: 4px;
 		}
 		
+		@media only screen and (max-width: 600px) {
+		  .reveal .slides {
+			  	inset: 31% auto auto 50%!important;
+			}
+			h1  {
+				font-size: 1.9em!important;
+			}
+			h2  {
+				font-size: 1.6em!important;
+			}
+			h3  {
+				font-size: 1.3em!important;
+			}
+			h4  {
+				font-size: 1em!important;
+			}
+		}
 	</style>
 	
 </head>
@@ -105,13 +123,22 @@
 
 	<!-- MAIN JS -->
 	<script>
-		var maxScale = 1.2, initHeight = $(window).innerHeight() * 0.9, initWidth = $(window).innerWidth() * 0.8;
-		var preview = false;
+		var maxScale = 1.1, minScale = 0.3;
+		var winW = $(window).innerWidth(), winH =  $(window).innerHeight();
+		var initWidth = Math.floor(winW * 0.98);
+		var preview = false, centerView = false;
+		var isMobileView = initWidth < 800 && winH > winW;
+		
+		if(isMobileView) {
+			maxScale = 0.64;
+			$('#presentation_container').css('height',winH+'px')
+		}
+		
 		if(location.search.indexOf('preview=1')>0){
 			maxScale = 0.7;
-			initHeight = 450;
-			initWidth = 800;
+			initWidth = 860;
 			preview = true;
+			centerView = true;
 		}
 		var imgSrc = $('#image_holder').attr('src').trim();
 		if(imgSrc.indexOf('http') < 0){
@@ -160,13 +187,17 @@
 		
 		// RevealJS
 		Reveal.initialize({
+			overview: true,
 			controls: true,
 			progress: true,
 			history: true,
-			center: true,
+			center: centerView,
+			keyboard: true,
+			touch: true,
+			loop: false,
+			margin: 0.04,
 			width: initWidth,
-			height: initHeight,
-			minScale: 0.64,
+			minScale: minScale,
 			maxScale: maxScale,
 			plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 		});
@@ -177,6 +208,10 @@
 		 		$('h1, h2, h3, h4').addClass('preview');
 		 		var holder = $('#contact-data-holder');
 		 		holder.find('input, button').attr('disabled','disabled')
+		 	}
+		 	else if(isMobileView){
+		 		//$('h1, h2, h3, h4, p').addClass('r-fit-text');
+		 		
 		 	}
 		});
 	</script>
