--- a/resources/app-templates/recommender/presentation-item.html
+++ b/resources/app-templates/recommender/presentation-item.html
@@ -47,20 +47,17 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.5.0/plugin/math/math.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<style type="text/css">
-		body { overflow: scroll; }
+		body { overflow: scroll!important; }
 		#image_holder {
 			display: block; margin-left: auto;margin-right: auto; max-width:100%; max-height: 420px;
 		}
 		#video_holder {
 			text-align: center;
-			width: 92%;
+			width: 86%;
     		margin: auto;
 		}
-		
 		#presentation_container {
-			width: 92%;
-			margin: auto;
-	    	margin-bottom:6px;
+			margin-top:18px;
 		}
 		h1.preview  {
 			font-size: 2.2em!important;
@@ -108,7 +105,11 @@
 <body>
 
 	<!-- MAIN CONTENT -->
-	   
+	 
+	<div style="display: none;" id="video_holder" >
+		<div id="video" style="margin: auto;" class="embed-responsive embed-responsive-16by9" ></div>
+	</div>
+	
 	<div id="presentation_container" >
 		<div class="reveal"  >
 			<div class="slides">
@@ -119,10 +120,6 @@
 	            </section>
 	        </div>
 		</div>
-	</div>
-	
-	<div style="display: none;" id="video_holder" >
-		<div id="video" style="margin: auto;" class="embed-responsive embed-responsive-16by9" ></div>
 	</div>
 	
 	<div id="image_container" style="display: none;" >
@@ -160,16 +157,22 @@
 			if(videoUrl != "") {
 				h = winH/ 2;
 			}
-			$('#presentation_container').css('height',h+'px');
+			
+			var pcNode = $('#presentation_container');
+			pcNode.css('height',h+'px');
 			
 			if(isMobileView) {
 				maxScale = 0.8;
+				pcNode.css('width',"100%!important")
 			}
 			else if(location.search.indexOf('preview=1')>0){
 				maxScale = 0.7;
 				initWidth = 860;
 				preview = true;
 				centerView = true;
+			}
+			else {
+				pcNode.css('margin',"auto").css('width',"90%!important")
 			}
 			
 			// RevealJS
