--- a/resources/app-templates/recommender/presentation-item.html
+++ b/resources/app-templates/recommender/presentation-item.html
@@ -3,6 +3,7 @@
 <head>
 	<title> {{pageTitle}} </title>
 	<meta name="description" content="{{{customData.content.description}}}"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 	
 	<!-- META FOR FACEBOOK -->
 	<meta property="og:site_name" content="{{host}}"/>
@@ -34,8 +35,6 @@
 	
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js" ></script>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-	
 	<!--  revealjs -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.5.0/reveal.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.5.0/theme/black.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,13 +46,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.5.0/plugin/math/math.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<style type="text/css">
-		body { overflow: scroll!important; }
+		body { overflow: scroll!important; padding-top: 10px;  }
 		#image_holder {
 			display: block; margin-left: auto;margin-right: auto; max-width:100%; max-height: 420px;
 		}
 		#video_holder {
 			text-align: center;
-			width: 88%;
+			width: 86%;
     		margin: auto;
 		}
 		h1.preview  {
