--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -430,10 +430,10 @@
 						            
 						            <div class="form-group text-right" >
 						            	<button type="button" class="btn btn-primary" onclick="setContentPersonalizationInSegment()">
-						            		<i class="fa fa-check-circle" aria-hidden="true"></i> Set contents 
+						            		<i class="fa fa-check-circle" aria-hidden="true"></i> Set content
 						            	</button>
 						            	<button type="button" class="btn btn-danger" onclick="removeRecommendedContentsInSegment()">
-						            		<i class="fa fa-trash" aria-hidden="true"></i> Remove contents 
+						            		<i class="fa fa-trash" aria-hidden="true"></i> Remove content
 						            	</button>
 						            </div>
 						            <hr>
@@ -459,10 +459,10 @@
 						            
 						            <div class="form-group text-right" >
 						            	<button type="button" class="btn btn-primary" onclick="setProductPersonalizationInSegment()">
-						            		<i class="fa fa-check-circle" aria-hidden="true"></i> Set products 
+						            		<i class="fa fa-check-circle" aria-hidden="true"></i> Set product
 						            	</button>
 						            	<button type="button" class="btn btn-danger" onclick="removeRecommendedProductsInSegment()">
-						            		<i class="fa fa-trash" aria-hidden="true"></i> Remove products 
+						            		<i class="fa fa-trash" aria-hidden="true"></i> Remove product
 						            	</button>
 						            </div>
 						            <hr>
