--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -328,7 +328,8 @@
 							     <div class="form-group" >
 									<div class="col-lg-12 sm_purpose" id="sm_forDeepAnalytics" > 
 										<label class="label_box" > <i class="fa fa-info-circle" aria-hidden="true"></i>
-										To enrich profile data by using advanced analytics to compute Customer Lifetime Value (CLV) and do predictive analytics </label>
+										To enrich profile data (CLV scoring, RFM scoring, data labels,...) by using connector with 
+											Jupyter Notebook or Google Colab </label>
 										<button type="button" class="btn btn-primary" title="Data Enrichment " data-purpose="forDataEnrichment" > 
 											<i class="fa fa-check-circle" aria-hidden="true"></i> Activate Enrichment
 										</button>
